# trading-agency-052026

./: .env.example  .gitignore  .pre-commit-config.yaml  AUDIT-REPORT-2026-05-27.md  Makefile  README.md  alembic.ini  pyproject.toml  sitecustomize.py  ux-mockups.html
.github/workflows/: ci.yml
docker/: app.Dockerfile  docker-compose.yml
docker/postgres/: init.sql
docs/: TOOLTIP_REGISTRY.md  agency-process-agent-data-source-status-2026-05-16.md  agency-system-review.md  audit-findings-s2.md  audit-findings-s3.md  audit-findings-s4.md  audit-findings-s5.md  audit-findings.md  audit-implementation-plan.md  codex-implementation-plan.md  continuous-learning-near-miss.md  current-controlled-version-2026-05-21.md  daily-ops-runbook.md  data-batching-strategy.md  data-extraction-strategy.md  data-provider-recommendations.md  deployment.md  emergency-recovery-qa-report-2026-05-19.md  findings.md  full-circle-review-2026-05-18.md  handoff-2026-05-21-bug-hunt-pause.md  handoff-2026-05-22-live-readiness-continuation.md  handoff-2026-05-22-ux-redesign-v3-cockpit.md  handoff-2026-05-29-ux-product-audit.md  leveraged-alternative-advisor.md  live-research-readiness.md  market-flow-worker.md  market-regime-audit-2026-05-29.md  mvp-execution-plan.md  mvp-gap-analysis.md  n2-test-plan.md  operational-gap-analysis.md  operational-ticket-status.md  phase-status.md  phase2-design.md  portfolio-management-rules.md  raspberry-pi-cockpit.md  research-brief.md  signal-methodology.md  stock-analysis-methodology.md  (+9 more)
docs/audits/: cockpit-candidate-flow-uxc-003-2026-06-01.md  cockpit-clearance-submit-uxc-006-2026-06-01.md  cockpit-contract-audit-2026-06-01.md  cockpit-full-workflow-uxc-013-2026-06-01.md  cockpit-instrument-panels-uxc-007-2026-06-01.md  cockpit-lane-state-uxc-008-2026-06-01.md  cockpit-legacy-reconciliation-uxc-012-2026-06-01.md  cockpit-pi-kiosk-hardening-uxc-011-2026-06-01.md  cockpit-portfolio-phase-uxc-005-2026-06-01.md  (+9 more)
migrations/: env.py
schemas/: agent-run.schema.json  candidate-lifecycle-event.schema.json  data-source-health.schema.json  evidence-pack.schema.json  execution-preview.schema.json  execution-state.schema.json  learning-outcome.schema.json  portfolio-monitor.schema.json  portfolio-snapshot.schema.json  prompt-audit.schema.json  provenance.schema.json  risk-decision.schema.json  risk-snapshot.schema.json  selection-report.schema.json  signal-result.schema.json
scripts/: __init__.py  analyze_test_deps.py  backup_postgres.py  check_cockpit_ux_qa.py  check_dashboard_live_data_qa.py  check_local_llm.py  check_local_runtime.py  check_openai_llm_review.py  check_operational_preflight.py  check_operational_readiness.py  check_paper_review_status.py  check_paper_trade_path.py  check_pit_bypass.py  check_provider_readiness.py  check_user_process_flow_audit.py  check_ux_preservation.py  configure_local_llm.py  render_methodology_pdf.py  restore_postgres.py  run_agency_cycle.py  run_daily_ops.py  run_first_version_pipeline.py  run_live_runtime_cycle.py  run_local_app.py  run_local_llm_insights.py  run_paper_broker_validation.py  seed_demo_runtime.py  split_dashboard.py  start_dev.ps1  start_local_runtime.ps1  write_daily_ops_report.py
src/agency/: app.py  (+6 more)
tickets/: README.md  T03-provenance-type.md  T04-pit-loader.md  T05-universe-history.md  T06-yfinance-puller.md  T07-sec-edgar-puller.md  T100-subscription-email-evidence-foundation.md  T101-seeking-alpha-email-agent.md  T102-tradevision-email-agent.md  T104-subscription-agent-orchestration-and-calibration.md  T11-fundamentals-signal.md  T115-massive-market-flow-backtest.md  T12-insider-signal.md  T135-command-full-live-readiness-progress.md  T136-leveraged-alternative-review-advisor.md  T15-abnormal-volume-signal.md  T16-prepost-signal.md  T17-web-rss-scrapling-spike.md  T19-news-headline-signal.md  T21-h1-ic-evaluator.md  T22-h1-verdict-synthesis.md  T23-realistic-profile-tool.md  T24-parameter-sweep-tool.md  T26-llm-review-ab-harness.md  T27-h3-llm-comparison-report.md  T28-phase1-findings-and-plan-revision.md  T33-source-health-persistence.md  T35-selection-report-persistence.md  T39-db-backed-runtime-status.md  T40-selection-report-api.md  T42-deterministic-selection-service-stub.md  T44-signal-result-adapters.md  T45-deterministic-selection-rules-v0.md  T46-selection-report-persistence-flow.md  T47-dashboard-candidate-list.md  T51-responsive-dashboard-shell.md  T52-command-cockpit-runtime-counts.md  T53-final-selection-dashboard.md  T56-read-only-policy-page.md  T57-risk-aggregator-v0.md  (+2 more)
ux upgrade claude design 01062026/: Trading Cockpit.html  Variation A.html  Variation C.html
(+704 files in other folders)
