[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-agency-v2"
version = "0.1.0"
description = "Supervised equity research and paper-trading assistant."
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
  "alembic>=1.16",
  "asyncpg>=0.30",
  "httpx>=0.28",
  "jsonschema>=4.25",
  "lxml>=6.0",
  "numpy>=2.4",
  "pandas>=2.3",
  "polars>=1.35",
  "pyarrow>=22.0",
  "pydantic>=2.12",
  "python-dotenv>=1.2",
  "referencing>=0.36",
  "scipy>=1.16",
  "statsmodels>=0.14.6",
  "SQLAlchemy>=2.0",
  "tzdata>=2025.2",
  "yfinance==1.2.2",
]

[project.optional-dependencies]
dev = [
  "hypothesis>=6.140",
  "mypy>=1.10",
  "pandas-stubs>=2.3",
  "pre-commit>=3.7",
  "pytest>=8.2",
  "pytest-asyncio>=0.25",
  "ruff>=0.5",
  "types-jsonschema>=4.25",
]
web = [
  "scrapling>=0.4.7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
  "A",
  "ARG",
  "B",
  "C4",
  "E",
  "ERA",
  "F",
  "I",
  "N",
  "PIE",
  "PL",
  "PTH",
  "RET",
  "SIM",
  "UP",
  "W",
]
ignore = [
  "PLR0913",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "research/src"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.14"
strict = true
files = ["src", "research/src"]
mypy_path = ["src", "research/src"]
explicit_package_bases = true
exclude = ["research/notebooks/"]

[[tool.mypy.overrides]]
module = ["research.notebooks.*"]
strict = false
